--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
 	<script src="js/js/list_news.js"></script>
 	<script src="js/js/cd19_data.js"></script>
 
+	<script>$(function(){ alert('網站已停止更新'); })</script>
+	
 	<style>
 		.list-group {
 			max-width: 300px;
